increased timeout